0.6.1	UNRELEASED

 BUG FIXES

  * Support git repositories without a branches directory in their control
    directory. (Jelmer Vernooij, #780239)

0.6.0	2011-04-12

 BUG FIXES

  * Fix encoding handling in Git working trees. (Jelmer Vernooij, #393038)

  * Use transports internally in "bzr git-import".
    (Jelmer Vernooij, #733919)

  * Provide custom GitDir.sprout() implementation for compatibility with bzr 2.4.
    (Jelmer Vernooij, #717937)

  * Revisions attached to tags that are not in the tips ancestry are now fetched.
    (Jelmer Vernooij, #309682)

  * Fix recursion error merging tags for bound branches.
    (Jelmer Vernooij, #742833)

  * Fix fetching from remote git repositories during merge.
    (Jelmer Vernooij, #741760)

  * Properly raise RootMissing if no root is specified to an empty
    tree in the commit builder. (Jelmer Vernooij, #731360)

  * Return proper conflict list from WorkingTree.conflicts. (Jelmer Vernooij, #741397)

  * Fix dpush of certain branches. (Jelmer Vernooij, #705807)

 API COMPLETENESS

  * Implement LocalGitControlDir.clone_on_transport. (Jelmer Vernooij, #721899)

 COMPATIBILITY

  * Drop support for Bazaar < 2.3. (Jelmer Vernooij)

0.5.4	2011-02-10

 BUG FIXES

  * Fix test suite compatibility with Bazaar 2.2. (Max Bowsher, #707434)

  * Fix compatibility with older versions of python-tdb.
    (Jelmer Vernooij, #707735)

  * Fix 'bzr git-import' from remote repositories. (Jelmer Vernooij, #706990)

  * Cope with tags when doing local fetches. (Jelmer Vernooij, #675637)

0.5.3	2011-01-21

 BUG FIXES

  * Add in an empty git repository now works. (Jelmer Vernooij, #603823)

  * Support opening of repositories over HTTP where the HTTP server
    doesn't allow directory access. (Jelmer Vernooij, #617078)

  * Support non-ascii characters in tag names. (Jelmer Vernooij, #616995)

  * Mark as compatible with bzr 2.3, 2.4. (Jelmer Vernooij)

  * Cope with unknown refs. (Jelmer Vernooij, #666443)
