@@ -5,6 +5,9 @@
   * Support git repositories without a branches directory in their control
     directory. (Jelmer Vernooij, #780239)
 
+  * Use Bazaar SSH vendor infrastructure to find whatever SSH client was
+    selected in Bazaar itself. (Jelmer Vernooij, #670035)
+
 0.6.0	2011-04-12
 
  BUG FIXES
